# babelfont

./: .gitignore  .pre-commit-config.yaml  AUTHORS.txt  Anchor.md  Axis.md  CONTRIBUTING.rst  Font.md  Glyph.md  Guide.md  HISTORY.md  HISTORY.rst  Instance.md  Layer.md  Makefile  Master.md  Names.md  README.md  README.rst  Shape.md  _config.yml  index.md  makedoc.py  pyproject.toml  renovate.json  requirements.txt  setup.py  t.py
.github/workflows/: ci.yml
Babelfont.glyphsFileFormat/Contents/: Info.plist
Babelfont.glyphsFileFormat/Contents/Resources/: plugin.py
Lib/babelfont/: Axis.py  Font.py  Glyph.py  Instance.py  Layer.py
Lib/babelfont/convertors/: designspace.py  glyphs.py  nfsf.py  truetype.py
Lib/babelfont/fontFilters/: featureWriters.py
Lib/nfsf/: Anchor.py  Axis.py  BaseObject.py  Component.py  Font.py  Glyph.py  Guide.py  Instance.py  Layer.py  Master.py  Names.py  Node.py  Shape.py  __init__.py  __main__.py
Lib/nfsf/convertors/: __init__.py  designspace.py  glyphs.py  nfsf.py  truetype.py
NFSF.glyphsFileFormat/Contents/: Info.plist
NFSF.glyphsFileFormat/Contents/Resources/: plugin.py
_data/: navigation.yml
docs/: Anchor.md  Axis.md  Font.md  Gemfile  Glyph.md  Guide.md  Instance.md  Layer.md  Master.md  Names.md  Shape.md  _config.yml  index.md
examples/: adjust-kerning.py  adjust-sidebearings.py  dump-kerning.py  duplicate-glyph.py
lib/babelfont/: __init__.py  __main__.py  anchor.py  component.py  contour.py  font.py  glyph.py  layer.py  lib.py
lib/babelfont/convertors/: fontlab.py  glyphs.py  otf.py  ttf.py  ufo.py
lib/babelfont/otf/: font.py  glyph.py
lib/babelfont/ttf/: TODO  component.py  contour.py  font.py  getKerningPairsFromOTF.py  glyph.py  info.py  kerning.py  layer.py  test.py
src/babelfont/: Anchor.py  Axis.py  BaseObject.py  Features.py  Font.py  Glyph.py  Guide.py  Instance.py  Layer.py  Master.py  Names.py  Node.py  Shape.py  __init__.py  __main__.py
src/babelfont/convertors/: __init__.py  designspace.py  fontforge.py  fontlab.py  glyphrstudio.py  glyphs.py  gsobject.py  nfsf.py  truetype.py  ufo.py
src/babelfont/fontFilters/: __init__.py  anchorPropagation.py  background.py  cu2qu.py  customParameters.py  decomposeMixed.py  dropUnexported.py  featureWriters.py  fillOpentype.py  glyphDataXML.py  glyphs3fea.py  intermediateLayer.py  marks.py  rename.py
tests/: test_dataclasses.py  test_features.py  test_glyphs2.py  test_glyphs3.py  test_glyphs3_roundtrip.py  test_glyphs3fea.py  test_glyphs_loader.py  test_glyphs_roundtrip.py  test_interchange.py  test_otf_loader.py  test_rename.py  test_ttf.py  test_ufo_roundtrip.py  test_vfj_loader.py
tests/data/: Designspace.glyphs  Glyphs2ManyAxes.glyphs  GlyphsFileFormatv3.glyphs  GlyphsFileFormatv3.vfj  SimpleTwoAxis.vfj  SimpleTwoAxis3.glyphs  Test1.glyphs
tests/data/Test1.ufo/: features.fea  fontinfo.plist  (+3 more)
(+17 files in other folders)
