[build-system]
requires = [
   "setuptools>=69.5.1",
   "setuptools_scm[toml]>=8.1.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
dynamic = ["version"]
name = "babelfont"
description = "Load, examine and save fonts in a variety of formats"
authors = [
    { name = "Simon Cozens", email= "simon@simon-cozens.org" }
]
readme = "README.md"

dependencies = [
    "orjson >= 3.5.1",
    "fonttools >=4.58.4",
    "ufoLib2 >=0.16.0",
    "openstep-plist >=0.2.2",
    "ufomerge >= 1.8.0", # Feature code subsetting used in dropUnexported filter
]

[project.optional-dependencies]
dev = [
    "pytest",
    "defcon"
]
read-ttf = [
    "fontfeatures >= 1.8.0",
]
vfb = [
    "vfbLib >=0.9.0",
]

[project.scripts]
babelfont = 'babelfont.__main__:main'

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"

[tool.setuptools_scm]
git_describe_command = "git describe --match 'v*' --tags"
